--- a/centrale/index.html
+++ b/centrale/index.html
@@ -4,6 +4,16 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.2/dist/leaflet.css" />
     <title>centrale</title>
+
+    <style>
+      body{
+        display: flex;
+        flex-flow: row wrap;
+      }
+      #dashboard, #history, #comparative, #mapping{
+        min-width: 250px;
+      }
+    </style>
   </head>
   <body>
     <div id="dashboard"></div>
