--- a/centrale/index.html
+++ b/centrale/index.html
@@ -3,19 +3,57 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.2/dist/leaflet.css" />
-    <title>centrale</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.1/Chart.min.js"></script>
+    <script src="https://unpkg.com/vue-chartjs/dist/vue-chartjs.min.js"></script>
+    <title>Centrale ASTATE</title>
 
     <style>
-      body{
+      body {
+        box-sizing: border-box;
         display: flex;
         flex-flow: row wrap;
+        font-family: 'Avenir', Helvetica, Arial, sans-serif;
+        -webkit-font-smoothing: antialiased;
+        -moz-osx-font-smoothing: grayscale;
+        color: #2c3e50;
+        margin: 0;
       }
-      #dashboard, #history, #comparative, #mapping{
+
+      #dashboard, #history, #comparative, #mapping, #loading{
         min-width: 250px;
+        border: 1px solid #2c3e50;
+        flex-grow: 1;
+        text-align: center;
+      }
+
+      #header {
+        width: 100vw;
+        background-color: #2c3e50;
+        color: white;
+        text-align: center;
+        font-weight: bold;
+        font-size: 1.5em;
+        padding-top: 12px;
+        padding-bottom: 12px;
+      }
+
+      table{
+        margin-left:auto; 
+        margin-right:auto;
+      }
+
+      h1{
+        font-size: 1.2em;
+        font-weight: normal;
+      }
+
+      canvas{
+        height: 400px;
       }
     </style>
   </head>
   <body>
+    <div id="header">ASTATE : Application de STAtions météo en TEmps réel</div>
     <div id="dashboard"></div>
     <div id="history"></div>
     <div id="comparative"></div>
