--- a/centrale/index.html
+++ b/centrale/index.html
@@ -11,16 +11,24 @@
       body {
         box-sizing: border-box;
         display: flex;
-        flex-flow: row wrap;
+        flex-flow: column;
         font-family: 'Avenir', Helvetica, Arial, sans-serif;
         -webkit-font-smoothing: antialiased;
         -moz-osx-font-smoothing: grayscale;
         color: #2c3e50;
         margin: 0;
+        height: 100vh;
+      }
+
+      .row {
+        display: flex;
+        flex-flow: row wrap;
+        flex-grow: 1;
       }
 
       #dashboard, #history, #comparative, #mapping, #loading{
         min-width: 250px;
+        min-height: 250px;
         border: 1px solid #2c3e50;
         flex-grow: 1;
         text-align: center;
@@ -47,17 +55,18 @@
         font-weight: normal;
       }
 
-      canvas{
-        height: 400px;
-      }
     </style>
   </head>
   <body>
     <div id="header">ASTATE : Application de STAtions météo en TEmps réel</div>
-    <div id="dashboard"></div>
-    <div id="history"></div>
-    <div id="comparative"></div>
-    <div id="mapping"></div>
+    <div class="row">
+      <div id="dashboard"></div>
+      <div id="history"></div>
+    </div>
+    <div class="row">
+      <div id="comparative"></div>
+      <div id="mapping"></div>
+    </div>
     <script src="/dist/build.js"></script>
   </body>
 </html>
